fixed alignation bugs

--- a/styles.css
+++ b/styles.css
@@ -1,174 +1,181 @@
-html{
-    font-family: 'Signika Negative', sans-serif;
-    color: aliceblue;
-    height: 100%;
+html {
+  font-family: "Signika Negative", sans-serif;
+  color: aliceblue;
 }
-body{
-    display: flex;
-    overflow: hidden;
-
+body {
+  display: flex;
+  overflow: hidden;
 }
-#imagecontainer{
-    background: url(/img/inspiration.jpg)  ; 
-    background-size: cover;
-    display: flex;
-    width: 40vw;
-    height: 100vh;
-    border-radius: 1%;
-    
-
+* {
+  padding: 0;
+  margin: 0;
 }
-#logospace{
-    height: 150px;
-    width: 100%;
-    margin-top: 20%;
-    background-color: black;
-    opacity: 0.75;
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    text-align: center;
+#imagecontainer {
+  background: url(/img/inspiration.jpg);
+  background-size: cover;
+  display: flex;
+  width: 40vw;
 }
-#logo{
-    border-radius: 50%;
+#logospace {
+  height: 150px;
+  width: 100%;
+  margin-top: 20%;
+  background-color: black;
+  opacity: 0.75;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  text-align: center;
 }
-img{
-    height: 100%;
-    width: 100%;
-    opacity: 1;
-    border-radius: 50%;
+#logo {
+  border-radius: 50%;
 }
-#logotext{
-    font-size: 3rem;
-    color: white;
-    align-self: center;
-    width: 50%;
-    justify-self: center;
-    
+img {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  border-radius: 50%;
+}
+#logotext {
+  font-size: 3rem;
+  color: white;
+  align-self: center;
+  width: 50%;
+  justify-self: center;
 }
 
-#foarmcontainer{
-    width: 60vw;
-    height: 100vh;
-    background: rgb(12,13,19);
-background: linear-gradient(180deg, rgba(12,13,19,1) 0%, rgba(23,23,27,1) 49%, rgba(7,8,23,1) 100%);
-font-family: 'Fredoka', sans-serif;
-
+#foarmcontainer {
+  width: 60vw;
+  background: rgb(12, 13, 19);
+  background: linear-gradient(
+    180deg,
+    rgba(12, 13, 19, 1) 0%,
+    rgba(23, 23, 27, 1) 49%,
+    rgba(7, 8, 23, 1) 100%
+  );
+  font-family: "Fredoka", sans-serif;
 }
-    header{
-    font-size:  1.8rem;
-    display: flex;
-    flex-direction: column;
-    color: rgb(255, 255, 255);
+header {
+  font-size: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  color: rgb(255, 255, 255);
 }
-#blackflag{
-    background-color: black;
-    opacity: 0.5;  
-    width: 100%;
-    height: 20%;
-    margin-top: 13.4%;
-    height: 190px;
-    box-sizing: border-box;
-    padding: 50px;
- 
-
+#blackflag {
+  background-color: black;
+  opacity: 0.5;
+  width: 100%;
+  height: 20%;
+  margin-top: 13.4%;
+  height: 190px;
+  box-sizing: border-box;
+  padding: 50px;
 }
-p{
-    margin: -1px;
-}
-
-#separator{
-
-    margin-top: 25px;
-    margin-left: 30px;
-    margin-bottom: -20px;
-    font-size: 2rem;
-    color: rgb(180, 90, 16);
-
-
-
-}
-h1{
-    margin-left: 30px;
-    margin-top: 120px;
-}
-form{
-    width: 100%;
-    color: darkorange;    
-}
-#containerform{
-    width: 100%;
-
-}
-#doublecol{
-    display: flex;
-    background-color: rgb(15, 14, 14);
-    border: rgb(10, 10, 10);;
-    padding: 10px;
-    box-shadow: 1px 1px 30px rgb(23, 24, 16);
-    margin-bottom: 20px;
-}
-input{
-    padding: 10px;
-    margin: 10px;
-    display: block;
-    font-family: 'Fredoka', sans-serif;
-    border-radius: 5%;
-    width: 80%;
-    height: 15px;
-    background: transparent;
-    border: 1px solid rgb(46, 46, 43);
-    color: aliceblue;
-}
-label{
-    display: block;
-    margin-left: 10px;
-    margin-bottom: -5px;
-    font-family: 'Fredoka', sans-serif;
-    font-size: 0.8rem;
-    }
-
-.formdiv{
-    flex:1;
-    padding: 20px;
-    margin-left: 80px;
-}
-#footer{
-    padding: 20px;
+p {
+  margin: -1px;
 }
 
-input:-webkit-autofill {transition: background-color 5000s ease-in-out 0s;}
-input:focus{
-    border: 3px solid   rgb(59, 15, 161);
-    border-radius: 5%;
-    outline: none;
+#separator {
+  margin-top: 25px;
+  margin-left: 30px;
+  margin-bottom: -20px;
+  font-size: 2rem;
+  color: rgb(180, 90, 16);
 }
-textarea:focus{
-    outline: none;
+h1 {
+  margin-left: 30px;
+  margin-top: 120px;
 }
-button{
-    padding: 15px;
-    margin-left: 30px;
-    background-color: rgb(34, 33, 33);
-    border: solid 1px;
-    border-radius: 10%;
-    color: darkgoldenrod;
-    font-weight: 800;
-    margin-top: -5px;
+form {
+  width: 100%;
+  color: darkorange;
 }
-#footer{
-    height: 15%;
-    margin-top: -5px;
+#containerform {
+  width: 100%;
+}
+#doublecol {
+  display: flex;
+  background-color: rgb(15, 14, 14);
+  border: rgb(10, 10, 10);
+  padding: 10px;
+  box-shadow: 1px 1px 30px rgb(23, 24, 16);
+  margin-bottom: 20px;
+}
+input {
+  padding: 10px;
+  margin: 10px;
+  display: block;
+  font-family: "Fredoka", sans-serif;
+  border-radius: 5%;
+  width: 80%;
+  height: 15px;
+  background: transparent;
+  border: 1px solid rgb(46, 46, 43);
+  color: aliceblue;
+}
+label {
+  display: block;
+  margin-left: 10px;
+  margin-bottom: -5px;
+  font-family: "Fredoka", sans-serif;
+  font-size: 0.8rem;
 }
 
-input:focus:required:invalid{
-    border: red 1px solid;
+.formdiv {
+  flex: 1;
+  padding: 20px;
+  margin-left: 80px;
+}
+#footer {
+  padding: 20px;
 }
 
-a:link{
-    text-decoration: none;
+input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+}
+input:focus {
+  border: 3px solid rgb(59, 15, 161);
+  border-radius: 5%;
+  outline: none;
+}
+textarea:focus {
+  outline: none;
+}
+button {
+  padding: 15px;
+  margin-left: 30px;
+  background-color: rgb(34, 33, 33);
+  border: solid 1px;
+  border-radius: 10%;
+  color: darkgoldenrod;
+  font-weight: 800;
+  margin-top: -5px;
+}
+button:hover {
+  transform: scale(1.1);
+}
+#footer {
+  height: 15%;
+  margin-top: -5px;
 }
 
-a{
-    color: rgb(40, 40, 117);
+input:focus:required:invalid {
+  border: red 1px solid;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a {
+  color: rgb(40, 40, 117);
+}
+
+@media (max-width: 1250px) {
+  #logospace #logotext {
+    font-size: 2.5rem;
+  }
+  #blackflag p {
+    font-size: 1.5rem;
+  }
 }
